# z3st

./: .flake8  .gitignore  .pre-commit-config.yaml  .yamlfmt  CITATION.cff  CLAUDE.md  CONTEXT.md  GIT-COMMANDS.md  LICENSE  README.md  clean.sh  internship.md  paper.bib  paper.md  privacy.md  punch_list.md  pyproject.toml  setup.py  z3st_env.yml
.claude/: settings.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  lint.yml  paper.yml  static.yml
cases/: non-regression.sh  non-regression_summary.txt
cases/00_example/: boundary_conditions.yaml  non-regression.py
cases/10_cylindrical_shell_thick_plane_stress/: input.yaml
cases/11_cylindrical_shell_thin/: input.yaml
cases/12_thick_cylindrical_thermal_shield/: input.yaml
cases/17_annular_cylinder/: input.yaml
cases/18_full_cylinder/: input.yaml  non-regression.py
cases/19_plate/: input.yaml
cases/1_thin_thermal_slab/: input.yaml
cases/20_coaxial_cylinders/: boundary_conditions.yaml  input.yaml  non-regression.py
cases/2_thin_cylindrical_thermal_shield/: input.yaml
cases/3_thin_thermal_slab_adiabatic/: input.yaml
cases/4_thin_cylindrical_thermal_shield_adiabatic/: input.yaml
cases/6_thin_cylindrical_thermal_shield_non_adiabatic/: input.yaml
cases/7_box_heated/: input.yaml
cases/8_cylindrical_shell_thick_plane_strain/: input.yaml
cases/9_cylindrical_shell_thick_GPS/: input.yaml
cases/attenuation_map/: input.yaml
cases/box_elliptical_cavity/: input.yaml
cases/plate_transient/: input.yaml
cases/spherical_pressurized_cavity/: input.yaml
cases/spherical_shell/: input.yaml
core/: config.py  diagnostic.py  finite_element_setup.py  mesh.py  solver.py  spine.py
core/mesh/: __init__.py  manager.py  mesh.py  plotter.py  reader.py
docs/: requirements.txt
docs/html/: .buildinfo  api.html  contributing.html  examples.html  genindex.html  index.html  installation.html  license.html  objects.inv  py-modindex.html  search.html  (+2 more)
materials/: T91.yaml
models/: gap_model.py  mechanical_model.py  thermal_model.py
utils/: export_vtu.py  export_vtx.py  output.py  utils_extract_vtu.py  utils_load.py  utils_plot.py  utils_verification.py  z-gui.py
z3st/: __init__.py  __main__.py
(+1454 files in other folders)
